<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/upcoming_title"
        android:id="@+id/textView2" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:id="@+id/listView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pending_title"
        android:id="@+id/textView3" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:id="@+id/listView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/previous_title"
        android:id="@+id/textView4" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:id="@+id/listView3" />
</LinearLayout>